# workshop-webscraping-docker

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
conteudo/: gastos_material_didatico_mec_2025.csv  workshop_webscraping_selenium.ipynb
dados/: contratos_mec_2025.csv
